# riscv-chisel-book

./: .gitignore
chisel-template/: .gitattributes  .gitignore  Makefile  build.sbt  trace_asm.rb  verilog-delete-comment.sh
chisel-template/mem/: bp_tag_init.binhex
chisel-template/rtl/riscv/: bootrom.hex  dcache.v  icache.v  icache_valid.v  phtmem.v  quotient_table.v  riscv.v  sdbuf.v  sram.v  top.sv
chisel-template/rtl/riscv_arty_a7/: RiscV.anno.json  RiscV.fir  riscv.v
chisel-template/src/c/: Makefile  br.c  cpop.c  dcache.c  dhry.c  fizzbuzz.c  icache.c  loop.c  mtimer.c  sdc.c  sdc_rx.c  sdc_tx.c  start.c  xcc.c  xcr.c  zbb.c
chisel-template/src/rust/bootrom/: Cargo.toml  Makefile  riscv32imc-unknown-none-elf.json
chisel-template/src/rust/bootrom/.cargo/: config.toml
chisel-template/src/rust/bootrom/libsrc/: boot.s  linker.ld
chisel-template/src/rust/bootrom/src/: cycle.rs  gpio.rs  lib.rs  loader.rs  mmio.rs  sdc.rs  start.rs  uart.rs
riscv-tests/isa/: Makefile  bfm.binhex  bfm.dump  bfmi.binhex  bfmi.dump  bfp.binhex  bfp.dump  bfpi.binhex  bfpi.dump  bfpp.binhex  bootrom.binhex  br.binhex  br.dump  bsct.binhex  cpop.binhex  dcache.binhex  dcache.dump  dhry.binhex  dhry.dump  fizzbuzz.binhex  fizzbuzz.dump  fsl.binhex  fsl.dump  fsr.binhex  fsr.dump  fsri.binhex  fsri.dump  icache.binhex  icache.dump  loop.binhex  loop.dump  lw.binhex  lw.dump  mtimer.binhex  mtimer.dump  rrd.binhex  rrd.dump  rv32mi-p-lh-misaligned.binhex  rv32mi-p-lh-misaligned.dump  rv32mi-p-lw-misaligned.binhex  (+170 more)
vivado/riscv_arty35/: Makefile  riscv_arty35.tcl
(+98 files in other folders)
